--- a/public/website/style.css
+++ b/public/website/style.css
@@ -35,7 +35,8 @@ a {
     position: absolute;
     bottom: 0;
     opacity: 0;
-    left: 85px;
+    left: 50%;
+    transform: translate(-50%);
     text-transform: uppercase;
     transition: all .5s;
 }
@@ -54,6 +55,13 @@ a {
     overflow: hidden;
     text-decoration: none;
     transition: all .3s;
+}
+@media (min-width: 768px) and (max-width: 991px){
+    .button-1 {
+        font-size: 12px;
+        line-height: 1;
+        padding: 0.4rem 0.3rem;
+    }
 }
 .button-1:hover {
     border-color: rgb(250, 250, 250);
@@ -288,7 +296,7 @@ section.elementor {
 }
 .custom-product .custom-img:hover .button-1-a {
     opacity: 1;
-    bottom: 15px;
+    bottom: 10%;
 }
 .custom-product .custom-img .custom-btn:hover {
     background-color: #282562;
