--- a/public/website/style.css
+++ b/public/website/style.css
@@ -242,6 +242,7 @@ section.elementor {
 }
 .custom-product .custom-img {
     position: relative;
+    border: 1px solid #7a6e6e80;
     transition: all 0.2s ease-in-out;
 }
 .custom-product .custom-img:hover {
@@ -255,7 +256,14 @@ section.elementor {
 
 .custom-product .custom-img a img {
     width: 100%;
+    height: 316px;
     /* border-radius: 8px; */
+}
+@media (max-width: 575px) {
+    .custom-product .custom-img a img {
+        width: 100%;
+        height: auto;
+    }
 }
 .custom-product .category-title {
     position: absolute;
@@ -443,9 +451,16 @@ section.elementor {
 }
 .product-filter .img-box {
     position: relative;
+    border: 1px solid #7a6e6e80;
 }
 .product-filter .img-box img {
+    width: 100%;
     height: 316px;
+}
+@media (max-width: 575px) {
+    .product-filter .img-box img {
+        height: auto;
+    }
 }
 .product-filter .img-box .img-link {
     position: absolute;
@@ -584,13 +599,14 @@ section.elementor {
 .product-detail .detail-img img {
     height: 250px;
 }
-.product-detail .detail-product .button-1-a {
+.product-detail .detail-product .button-detail {
     position: relative;
     margin-top: 10px;
     display: inline-block;
     bottom: auto;
     left: auto;
-    opacity: 1;
+    text-transform: uppercase;
+    transition: all .5s;
 }
 
 
@@ -637,7 +653,9 @@ section.elementor {
 .site-footer .address li {
     color: #f9eded;
 }
-
+.site-footer .address li a {
+    color: rgb(249, 237, 237);
+}
 
 .site-footer .link {
     display: flex;
@@ -667,7 +685,10 @@ section.elementor {
 .site-footer .footer-end p {
     margin-bottom: 0;
 }
-.site-footer .footer-end .developed{
+.site-footer .footer-end .developed {
     display: flex;
     justify-content: end;
+}
+.site-footer .footer-end .developed a {
+    color: #ebf2ff
 }
