--- a/public/website/style.css
+++ b/public/website/style.css
@@ -174,6 +174,7 @@ li.nav-item:last-child {
     animation-duration: 1s;
     animation-fill-mode: both;
     animation-name: fadeInDown;
+    background: #ff0000d1;
 }
 
 /* First Page Breadcrumb */
